--- a/index.html
+++ b/index.html
@@ -2,31 +2,15 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8" />
-  <title>动植物地图记录</title>
+  <title>动植物地图展示</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     body { margin: 0; padding: 0; font-family: Arial, sans-serif; }
-    #formContainer { padding: 10px; background: #f9f9f9; }
-    #recordForm label { margin-right: 10px; }
-    #map { width: 100%; height: 90vh; }
-    #recordForm input, #recordForm button { margin: 5px 0; }
-    .delete-btn { margin-top: 5px; padding: 4px 8px; background: #e74c3c; color: #fff; border: none; cursor: pointer; border-radius: 4px; }
-    .delete-btn:hover { background: #c0392b; }
+    #map { width: 100%; height: 100vh; }
   </style>
 </head>
 <body>
-  <div id="formContainer">
-    <form id="recordForm">
-      <label>纬度: <input type="number" id="lat" step="any" required></label>
-      <label>经度: <input type="number" id="lng" step="any" required></label>
-      <label>动植物名: <input type="text" id="species" required></label>
-      <label>时间: <input type="datetime-local" id="time" required></label>
-      <label>图片: <input type="file" id="image" accept="image/*" required></label>
-      <button type="submit">添加记录</button>
-    </form>
-    <p>提示：点击地图任意位置，可自动填写经纬度。</p>
-  </div>
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -37,96 +21,35 @@
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // 本地存储键
-    var STORAGE_KEY = 'plantAnimalRecords';
-    var records = [];
-    var nextId = 0;
+    // 配置数据文件和图片文件夹路径
+    var DATA_URL = 'records.json';
+    var IMAGE_FOLDER = 'images/';
 
-    // 保存到本地存储
-    function saveRecords() {
-      var simpleRecords = records.map(function(r) {
-        return {
-          id: r.id,
-          lat: r.lat,
-          lng: r.lng,
-          species: r.species,
-          time: r.time,
-          imgUrl: r.imgUrl
-        };
-      });
-      localStorage.setItem(STORAGE_KEY, JSON.stringify(simpleRecords));
-    }
-
-    // 从本地存储加载
+    // 从 records.json 加载并渲染点位
     function loadRecords() {
-      var data = localStorage.getItem(STORAGE_KEY);
-      if (data) {
-        try {
-          var arr = JSON.parse(data);
-          arr.forEach(function(item) {
-            addRecordToMap(item);
-            records.push(item);
-            nextId = Math.max(nextId, item.id + 1);
+      fetch(DATA_URL)
+        .then(function(response) {
+          if (!response.ok) throw new Error('网络错误 ' + response.status);
+          return response.json();
+        })
+        .then(function(arr) {
+          arr.forEach(function(record) {
+            // 构造图片完整路径：images/文件名
+            var imgPath = IMAGE_FOLDER + record.image;
+            var marker = L.marker([record.lat, record.lng]).addTo(map);
+            var popupContent =
+              '<b>' + record.species + '</b><br>' +
+              '<img src="' + imgPath + '" style="max-width:200px;"><br>' +
+              record.time.replace('T', ' ');
+            marker.bindPopup(popupContent);
           });
-        } catch (e) {
-          console.error('解析本地存储数据出错', e);
-        }
-      }
+        })
+        .catch(function(err) {
+          console.error('加载记录失败：', err);
+        });
     }
 
-    // 添加标记并绑定删除
-    function addRecordToMap(record) {
-      var marker = L.marker([record.lat, record.lng]).addTo(map);
-      var popupContent = '<b>' + record.species + '</b><br>' +
-                         '<img src="' + record.imgUrl + '" style="max-width:200px;"><br>' +
-                         record.time.replace('T', ' ') + '<br>' +
-                         '<button data-id="' + record.id + '" class="delete-btn">删除记录</button>';
-      marker.bindPopup(popupContent);
-      marker.on('popupopen', function() {
-        var btn = document.querySelector('button.delete-btn[data-id="' + record.id + '"]');
-        if (btn) {
-          btn.addEventListener('click', function() {
-            map.removeLayer(marker);
-            records = records.filter(function(r) { return r.id !== record.id; });
-            saveRecords();
-            marker.closePopup();
-          });
-        }
-      });
-      record.marker = marker;
-    }
-
-    // 点击地图自动填写经纬度
-    map.on('click', function(e) {
-      document.getElementById('lat').value = e.latlng.lat.toFixed(6);
-      document.getElementById('lng').value = e.latlng.lng.toFixed(6);
-    });
-
-    // 表单提交
-    document.getElementById('recordForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      var lat = parseFloat(document.getElementById('lat').value);
-      var lng = parseFloat(document.getElementById('lng').value);
-      var species = document.getElementById('species').value;
-      var time = document.getElementById('time').value;
-      var file = document.getElementById('image').files[0];
-      var id = nextId++;
-
-      if (file) {
-        var reader = new FileReader();
-        reader.onload = function(evt) {
-          var imgUrl = evt.target.result;
-          var record = { id: id, lat: lat, lng: lng, species: species, time: time, imgUrl: imgUrl };
-          records.push(record);
-          addRecordToMap(record);
-          saveRecords();
-          document.getElementById('recordForm').reset();
-        };
-        reader.readAsDataURL(file);
-      }
-    });
-
-    // 初始化加载
+    // 页面初始化
     loadRecords();
   </script>
 </body>
